--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -47,7 +47,7 @@ $text-color: #000;
   display: block;
   min-width: 140px;
   text-align: center;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   color: #fff;
   text-transform: uppercase;
   background: #0071bc;
