--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,3 +1,24 @@
-.footer {
-  color: rebeccapurple;
+.footer-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 50% 50%;
+  align-content: center;
+  justify-content: center;
+}
+
+.footer-container h3 {
+  text-align: center;
+}
+
+.logo-container {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-content: center;
+  justify-content: center;
+}
+
+.footnote {
+  text-align: center;
+  font-size: 12pt;
 }
